--- a/index.html
+++ b/index.html
@@ -216,7 +216,19 @@
           <ul class="list work-images">
             <li class="work-images__example">
               <picture>
-                <source media="(max-width: 767px)" srcset="" type="image.jpg">
+                <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/work/type.webp 1x, ./images/work/type@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/work/type.jpg 1x, ./images/work/type@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
               <img
                 src="images/work/type.jpg"
                 class="work-images__example-pictures"
@@ -229,7 +241,19 @@
             </li>
             <li class="work-images__example">
               <picture>
-                <source>
+                <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/work/telefone.webp 1x, ./images/work/telefone@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/work/telefone.jpg 1x, ./images/work/telefone@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
               <img
                 src="images/work/telefone.jpg"
                 class="work-images__example-pictures"
@@ -242,7 +266,19 @@
             </li>
             <li class="work-images__example">
               <picture>
-                <source>
+                <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/work/ipad.webp 1x, ./images/work/ipad@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/work/ipad.jpg 1x, ./images/work/ipad@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
               <img
                 src="images/work/ipad.jpg"
                 class="work-images__example-pictures"
@@ -262,13 +298,50 @@
           <ul class="list employees">
             <li class="employees__card">
               <picture>
+                <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/igor.webp 1x, ./images/team/1200/igor@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/igor.jpg 1x, ./images/team/1200/igor@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/igor.webp 1x, ./images/team/768/igor@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/igor.jpg 1x, ./images/team/768/igor@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <!-- mobile version -->
-                <source media="(max-width: 767px)" srcset="" type="image.jpg">
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/igor.webp 1x, ./images/team/480/igor@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/igor.jpg 1x, ./images/team/480/igor@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
               <img
-                src="images/team/igor.jpg"
+                src="images/team/480/igor.jpg"
                 class="employees__card-pictures"
                 alt="Ігор Дем'яненко"
-                width="270"
+                width="450"
                 height="260"
               />
               </picture>
@@ -325,13 +398,51 @@
             </li>
             <li class="employees__card">
               <picture>
-                <source>
+                <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/repinaolga.webp 1x, ./images/team/1200/repinaolga@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/repinaolga.jpg 1x, ./images/team/1200/repinaolga@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/repinaolga.webp 1x, ./images/team/768/repinaolga@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/repinaolga.jpg 1x, ./images/team/768/repinaolga@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/repinaolga.webp 1x, ./images/team/480/repinaolga@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/repinaolga.jpg 1x, ./images/team/480/repinaolga@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
               <img
               class="employees__card-pictures"
-                src="images/team/repinaolga.jpg"
+                src="images/team/480/repinaolga.jpg"
                 class="pictures"
                 alt="Ольга Рєпіна"
-                width="270"
+                width="450"
                 height="260"
               />
               </picture>
@@ -388,13 +499,51 @@
             </li>
             <li class="employees__card">
               <picture>
-                <source>
+                <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/mikola.webp 1x, ./images/team/1200/mikola@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/mikola.jpg 1x, ./images/team/1200/mikola@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/mikola.webp 1x, ./images/team/768/mikola@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/mikola.jpg 1x, ./images/team/768/mikola@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/mikola.webp 1x, ./images/team/480/mikola@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/mikola.jpg 1x, ./images/team/480/mikola@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
               <img
               class="employees__card-pictures"
-                src="images/team/mikola.jpg"
+                src="images/team/480/mikola.jpg"
                 class="pictures"
                 alt="Микола Тарасов"
-                width="270"
+                width="450"
                 height="260"
               />
               </picture>
@@ -451,13 +600,51 @@
             </li>
             <li class="employees__card">
               <picture>
-                <source>
+                <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/michael.webp 1x, ./images/team/1200/michael@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/team/1200/michael.jpg 1x, ./images/team/1200/michael@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/michael.webp 1x, ./images/team/768/michael@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/team/768/michael.jpg 1x, ./images/team/768/michael@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/michael.webp 1x, ./images/team/480/michael@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/team/480/michael.jpg 1x, ./images/team/480/michael@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
               <img
               class="employees__card-pictures"
-                src="images/team/michael.jpg"
+                src="images/team/480/michael.jpg"
                 class="pictures"
                 alt="Михайло Єрмаков"
-                width="270"
+                width="450"
                 height="260"
               />
               </picture>
