--- a/portfolio.html
+++ b/portfolio.html
@@ -158,9 +158,47 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                 <source media="(min-width: )" srcset="">
+                 <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/notebook.webp 1x, ./images/projects/12000/notebook@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/notebook.jpg 1x, ./images/projects/12000/notebook.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/notebook.webp 1x, ./images/projects/768/notebook@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/notebook.jpg 1x, ./images/projects/768/notebook@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/notebook.webp 1x, ./images/projects/480/notebook@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/notebook 1x, ./images/projects/480/notebook@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
-                  src="./images/projects/12000/laptop.jpg"
+                  src="./images/projects/12000/notebook.jpg"
                   class="employees__card-size"
                   alt="notebook"
                   width="370"
@@ -183,7 +221,45 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                  <source media="(min-width: )" srcset="">
+                  <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/basketball.webp 1x, ./images/projects/12000/basketball@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/basketball.jpg 1x, ./images/projects/12000/basketball.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/basketball.webp 1x, ./images/projects/768/basketball@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/basketball.jpg 1x, ./images/projects/768/basketball@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/basketball.webp 1x, ./images/projects/480/basketball@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/basketball 1x, ./images/projects/480/basketball@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
                   src="./images/projects/12000/basketball.jpg"
                   class="employees__card-size"
@@ -210,7 +286,45 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                  <source media="(min-width: )" srcset="">
+                  <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/seafood.webp 1x, ./images/projects/12000/seafood@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/seafood.jpg 1x, ./images/projects/12000/seafood.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/seafood.webp 1x, ./images/projects/768/seafood@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/seafood.jpg 1x, ./images/projects/768/seafood@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/seafood.webp 1x, ./images/projects/480/seafood@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/seafood 1x, ./images/projects/480/seafood@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
                   src="./images/projects/12000/seafood.jpg"
                   class="employees__card-size"
@@ -235,7 +349,45 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                  <source media="(min-width: )" srcset="">
+                  <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/headphones.webp 1x, ./images/projects/12000/headphones@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/headphones.jpg 1x, ./images/projects/12000/headphones.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/headphones.webp 1x, ./images/projects/768/headphones@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/headphones.jpg 1x, ./images/projects/768/headphones@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/headphones.webp 1x, ./images/projects/480/headphones@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/headphones 1x, ./images/projects/480/headphones@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
                   src="./images/projects/12000/headphones.jpg"
                   class="employees__card-size"
@@ -260,7 +412,45 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                  <source media="(min-width: )" srcset="">
+                  <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/boxes.webp 1x, ./images/projects/12000/boxes@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/boxes.jpg 1x, ./images/projects/12000/boxes.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/boxes.webp 1x, ./images/projects/768/boxes@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/boxes.jpg 1x, ./images/projects/768/boxes@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/boxes.webp 1x, ./images/projects/480/boxes@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/boxes 1x, ./images/projects/480/boxes@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
                   src="./images/projects/12000/boxes.jpg"
                   class="employees__card-size"
@@ -285,7 +475,45 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                  <source media="(min-width: )" srcset="">
+                  <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/screen.webp 1x, ./images/projects/12000/screen@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/screen.jpg 1x, ./images/projects/12000/screen.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/screen.webp 1x, ./images/projects/768/screen@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/screen.jpg 1x, ./images/projects/768/screen@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/screen.webp 1x, ./images/projects/480/screen@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/screen 1x, ./images/projects/480/screen@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
                   src="./images/projects/12000/screen.jpg"
                   class="employees__card-size"
@@ -310,7 +538,45 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                  <source media="(min-width: )" srcset="">
+                  <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/magazine.webp 1x, ./images/projects/12000/magazine@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/magazine.jpg 1x, ./images/projects/12000/magazine.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/magazine.webp 1x, ./images/projects/768/magazine@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/768/magazine.jpg 1x, ./images/projects/768/magazine@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/magazine.webp 1x, ./images/projects/480/magazine@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/magazine 1x, ./images/projects/480/magazine@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
                   src="./images/projects/12000/magazine.jpg"
                   class="employees__card-size"
@@ -360,9 +626,47 @@
             <li class="employees__card-portfolio">
               <a href="" class="employees__card-portfolio-link">
                 <picture>
-                  <source media="(min-width: )" srcset="">
+                  <!-- desktop version -->
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/laptop.webp 1x, ./images/projects/12000/laptop@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 1200px)" 
+                srcset="./images/projects/12000/laptop.jpg 1x, ./images/projects/12000/laptop.jpg@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- tablet version -->
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/480/laptop.webp 1x, ./images/projects/480/laptop@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(min-width: 768px)" 
+                srcset="./images/projects/480/laptop.jpg 1x, ./images/projects/480/laptop@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
+                <!-- mobile version -->
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/laptop.webp 1x, ./images/projects/480/laptop@x2.webp 2x"
+
+                 type="image/webp"
+                 />
+                <source 
+                media="(max-width: 767px)" 
+                srcset="./images/projects/480/laptop 1x, ./images/projects/480/laptop@x2.jpg 2x"
+
+                 type="image/jpeg"
+                 />
                 <img
-                  src="./images/projects/12000/notebook.jpg"
+                  src="./images/projects/12000/laptop.jpg"
                   class="employees__card-size"
                   alt="typing"
                   width="370"
