--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Студія</a>
             </li>
             <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
-              <a href="/portfolio.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Портфоліо</a>
+              <a href="./portfolio.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Портфоліо</a>
             </li>
             <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Контакти</a>
