--- a/portfolio.html
+++ b/portfolio.html
@@ -206,8 +206,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Технокряк</h2>
                   <p class="headers-veiw">Веб-сайт</p>
+                </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -269,10 +271,10 @@
                 />
                 </picture>
                 <div class="border-color">
-                  <h2 class="portfolio-headers">
-                    Постер New Orlean vs Golden Star
-                  </h2>
+                  <div class="portfolio-content">
+                  <h2 class="portfolio-headers">Постер New Orlean vs Golden Star</h2>  
                   <p class="headers-veiw">Дизайн</p>
+                </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -334,8 +336,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Ресторан Seafood</h2>
                   <p class="headers-veiw">Додаток</p>
+                  </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -397,8 +401,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Проєкт Prime</h2>
                   <p class="headers-veiw">Маркетинг</p>
+                  </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -460,8 +466,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Проєкт Boxes</h2>
                   <p class="headers-veiw">Додаток</p>
+                  </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -523,8 +531,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Inspiration has no Borders</h2>
                   <p class="headers-veiw">Веб-сайт</p>
+                  </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -586,8 +596,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Видання Limited Edition</h2>
                   <p class="headers-veiw">Дизайн</p>
+                  </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -611,8 +623,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Проєкт LAB</h2>
                   <p class="headers-veiw">Маркетинг</p>
+                  </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
@@ -674,8 +688,10 @@
                 />
                 </picture>
                 <div class="border-color">
+                  <div class="portfolio-content">
                   <h2 class="portfolio-headers">Growing Business</h2>
                   <p class="headers-veiw">Додаток</p>
+                  </div>
                 </div>
                 <div class="text-portfolio">
                   <p class="text-portfolio-theme">
