--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </button>
           <ul class="mobile-menu_nav mobile-menu_nav-margin">
             <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
-              <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Студія</a>
+              <a href="" class=" mobile-menu_nav-list-link-main after-link">Студія</a>
             </li>
             <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
               <a href="./portfolio.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Портфоліо</a>
