--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
               <a href="./index.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Студія</a>
             </li>
             <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
-              <a href="/portfolio.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Портфоліо</a>
+              <a href="/portfolio.html" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main after-link">Портфоліо</a>
             </li>
             <li class="mobile-menu__nav-list mobile-menu__nav-list-links">
               <a href="" class="mobile-menu_nav-list-link mobile-menu_nav-list-link-main">Контакти</a>
