--- a/index.html
+++ b/index.html
@@ -301,44 +301,44 @@
                 <!-- desktop version -->
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/igor.webp 1x, ./images/team/1200/igor@x2.webp 2x"
+                srcset="./images/team/igor-1200.webp 1x, ./images/team/igor-1200@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/igor.jpg 1x, ./images/team/1200/igor@x2.jpg 2x"
+                srcset="./images/team/igor-1200.jpg 1x, ./images/team/igor-1200@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- tablet version -->
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/igor.webp 1x, ./images/team/768/igor@x2.webp 2x"
+                srcset="./images/team/igor-768.webp 1x, ./images/team/igor-768@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/igor.jpg 1x, ./images/team/768/igor@x2.jpg 2x"
+                srcset="./images/team/igor-768.jpg 1x, ./images/team/igor-768@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- mobile version -->
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/igor.webp 1x, ./images/team/480/igor@x2.webp 2x"
+                srcset="./images/team/igor-480.webp 1x, ./images/team/igor-480@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/igor.jpg 1x, ./images/team/480/igor@x2.jpg 2x"
+                srcset="./images/team/igor-480 1x, ./images/team/igor-480@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
               <img
-                src="images/team/480/igor.jpg"
+                src="images/team/igor-480.jpg"
                 class="employees__card-pictures"
                 alt="Ігор Дем'яненко"
                 width="450"
@@ -401,45 +401,45 @@
                 <!-- desktop version -->
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/repinaolga.webp 1x, ./images/team/1200/repinaolga@x2.webp 2x"
+                srcset="./images/team/repinaolga-1200.webp 1x, ./images/team/repinaolga-1200@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/repinaolga.jpg 1x, ./images/team/1200/repinaolga@x2.jpg 2x"
+                srcset="./images/team/repinaolga-1200.jpg 1x, ./images/team/repinaolga-1200@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- tablet version -->
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/repinaolga.webp 1x, ./images/team/768/repinaolga@x2.webp 2x"
+                srcset="./images/team/repinaolga-768.webp 1x, ./images/team/repinaolga-768@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/repinaolga.jpg 1x, ./images/team/768/repinaolga@x2.jpg 2x"
+                srcset="./images/team/repinaolga-768.jpg 1x, ./images/team/repinaolga-768@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- mobile version -->
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/repinaolga.webp 1x, ./images/team/480/repinaolga@x2.webp 2x"
+                srcset="./images/team/repinaolga-480.webp 1x, ./images/team/repinaolga-480@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/repinaolga.jpg 1x, ./images/team/480/repinaolga@x2.jpg 2x"
+                srcset="./images/team/repinaolga-480.jpg 1x, ./images/team/repinaolga-480@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
               <img
               class="employees__card-pictures"
-                src="images/team/480/repinaolga.jpg"
+                src="images/team/repinaolga-480.jpg"
                 class="pictures"
                 alt="Ольга Рєпіна"
                 width="450"
@@ -502,45 +502,45 @@
                 <!-- desktop version -->
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/mikola.webp 1x, ./images/team/1200/mikola@x2.webp 2x"
+                srcset="./images/team/mikola-1200.webp 1x, ./images/team/mikola-1200@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/mikola.jpg 1x, ./images/team/1200/mikola@x2.jpg 2x"
+                srcset="./images/team/mikola-1200.jpg 1x, ./images/team/mikola-1200@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- tablet version -->
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/mikola.webp 1x, ./images/team/768/mikola@x2.webp 2x"
+                srcset="./images/team/mikola-768.webp 1x, ./images/team/mikola-768@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/mikola.jpg 1x, ./images/team/768/mikola@x2.jpg 2x"
+                srcset="./images/team/mikola-768.jpg 1x, ./images/team/mikola-768@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- mobile version -->
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/mikola.webp 1x, ./images/team/480/mikola@x2.webp 2x"
+                srcset="./images/team/mikola-480.webp 1x, ./images/team/mikola-480@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/mikola.jpg 1x, ./images/team/480/mikola@x2.jpg 2x"
+                srcset="./images/team/mikola-480.jpg 1x, ./images/team/mikola-480@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
               <img
               class="employees__card-pictures"
-                src="images/team/480/mikola.jpg"
+                src="images/team/mikola-480.jpg"
                 class="pictures"
                 alt="Микола Тарасов"
                 width="450"
@@ -603,45 +603,45 @@
                 <!-- desktop version -->
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/michael.webp 1x, ./images/team/1200/michael@x2.webp 2x"
+                srcset="./images/team/michael-1200.webp 1x, ./images/team/michael-1200@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 1200px)" 
-                srcset="./images/team/1200/michael.jpg 1x, ./images/team/1200/michael@x2.jpg 2x"
+                srcset="./images/team/michael-1200.jpg 1x, ./images/team/michael-1200@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- tablet version -->
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/michael.webp 1x, ./images/team/768/michael@x2.webp 2x"
+                srcset="./images/team/michael-768.webp 1x, ./images/team/michael-768@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(min-width: 768px)" 
-                srcset="./images/team/768/michael.jpg 1x, ./images/team/768/michael@x2.jpg 2x"
+                srcset="./images/team/michael-768.jpg 1x, ./images/team/michael-768@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
                 <!-- mobile version -->
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/michael.webp 1x, ./images/team/480/michael@x2.webp 2x"
+                srcset="./images/team/michael-480.webp 1x, ./images/team/michael-480@x2.webp 2x"
 
                  type="image/webp"
                  />
                 <source 
                 media="(max-width: 767px)" 
-                srcset="./images/team/480/michael.jpg 1x, ./images/team/480/michael@x2.jpg 2x"
+                srcset="./images/team/michael-480.jpg 1x, ./images/team/michael-480@x2.jpg 2x"
 
                  type="image/jpeg"
                  />
               <img
               class="employees__card-pictures"
-                src="images/team/480/michael.jpg"
+                src="images/team/michael-480.jpg"
                 class="pictures"
                 alt="Михайло Єрмаков"
                 width="450"
