--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/team/igor-480        1x,
+                    ./images/team/igor-480.jpg    1x,
                     ./images/team/igor-480@x2.jpg 2x
                   "
                   type="image/jpeg"
