--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 />
                 <img
                   src="images/work/ipad.jpg"
-                  class="work-images__example-pictures"
+                  class="work-images__example-pictures "
                   alt="малює"
                   width="370"
                   height="294"
@@ -394,8 +394,8 @@
                   type="image/jpeg"
                 />
                 <img
-                  src="images/team/igor-480.jpg"
-                  class="employees__card-pictures"
+                  src="images/team/igor-480.jpg"                 
+                  class="employees__card-pictures pictures"
                   alt="Ігор Дем'яненко"
                   width="450"
                   height="460"
@@ -506,9 +506,8 @@
                   type="image/jpeg"
                 />
                 <img
-                  class="employees__card-pictures"
+                  class="employees__card-pictures pictures"
                   src="images/team/repinaolga-480.jpg"
-                  class="pictures"
                   alt="Ольга Рєпіна"
                   width="450"
                   height="460"
@@ -619,9 +618,8 @@
                   type="image/jpeg"
                 />
                 <img
-                  class="employees__card-pictures"
+                  class="employees__card-pictures pictures"
                   src="images/team/mikola-480.jpg"
-                  class="pictures"
                   alt="Микола Тарасов"
                   width="450"
                   height="460"
@@ -732,9 +730,8 @@
                   type="image/jpeg"
                 />
                 <img
-                  class="employees__card-pictures"
+                  class="employees__card-pictures pictures"
                   src="images/team/michael-480.jpg"
-                  class="pictures"
                   alt="Михайло Єрмаков"
                   width="450"
                   height="460"
