--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,8 @@
               required
             />
             <label for="checkbox" class="contact-form-checkbox-label">
-              Погоджуюся з розсилкою та приймаю&nbsp;<a
+              Погоджуюся з розсилкою та приймаю&nbsp;
+              <a
                 href=""
                 class="contact-link"
                 >Умови договору</a
